--- a/azure-app-kiran/appsettings.json
+++ b/azure-app-kiran/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ApplicationInsights": {
+    "ConnectionString": "InstrumentationKey=a3293b49-c444-4ee5-8ed5-dae96e80491a;IngestionEndpoint=https://australiaeast-1.in.applicationinsights.azure.com/;LiveEndpoint=https://australiaeast.livediagnostics.monitor.azure.com/;ApplicationId=f6d6e676-cf33-425d-b413-0bd7fd66a49b"
+  },
+  "Greeting": "Greetings from Configuration"
 }
